# votes

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  entrypoint.sh  pyproject.toml
core/: admin.py  context_processors.py  forms.py  help.py  models.py  tests.py  urls.py  views.py
core/static/core/js/: messages.js
core/templates/core/: base.html  create.html  history.html  history_detail.html  landing.html  login.html  my.html  password_change.html  poll_results.html  vote.html  votes.html
votes/: asgi.py  settings.py  urls.py  wsgi.py
