[project]
name = "votes"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Okhotnikov",email = "nikiquark@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==6.0",
    "gunicorn==23.0.0",
    "python-dotenv (>=1.2.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false